@@ -120,6 +120,17 @@ handle_rewrite_req(#httpd{
     Prefix = <<"/", DbName/binary, "/", DesignId/binary>>,
     QueryList = lists:map(fun decode_query_value/1, couch_httpd:qs(Req)),
 
+    MaxRewritesList = couch_config:get("httpd", "rewrite_limit", "100"),
+    MaxRewrites = list_to_integer(MaxRewritesList),
+    NRewrites = case get(couch_rewrite_count) of
+        undefined ->
+            put(couch_rewrite_count, 1);
+        NumRewrites when NumRewrites < MaxRewrites ->
+            put(couch_rewrite_count, NumRewrites + 1);
+        _ ->
+            throw({bad_request, <<"Exceeded rewrite recursion limit">>})
+    end,
+
     #doc{body={Props}} = DDoc,
 
     % get rules from ddoc
